@@ -28,6 +28,18 @@ Exceptions:
 
 If X509_new failed, an exception is thrown with C<eval_error_id> set to the basic type ID of L<Net::SSLeay::Error|SPVM::Net::SSLeay::Error> class.
 
+=head2 check_issued
+
+C<static method check_issued : int ($issuer : L<Net::SSLeay::X509|SPVM::Net::SSLeay::X509>, $subject : L<Net::SSLeay::X509|SPVM::Net::SSLeay::X509>);>
+
+Calls native L<X509_check_issued|https://docs.openssl.org/1.1.1/man3/X509_check_issued> function given the pointer value of $issuer, the pointer value of $subject, and returns its return value.
+
+Exceptions:
+
+The X509 object $issuer must be defined. Otherwise an exception is thrown.
+
+The X509 object $subject must be defined. Otherwise an exception is thrown.
+
 =head1 Instance Methods
 
 =head2 get_issuer_name
@@ -91,16 +103,6 @@ Calls L</"pubkey_digest"> method given appropriate arguments, and returns the ou
 C<method dup : L<Net::SSLeay::X509|SPVM::Net::SSLeay::X509> ();>
 
 Calls native L<X509_dup|https://docs.openssl.org/3.3/man3/X509_dup> function given the pointer value of the instance, creates a new L<Net::SSLeay::X509|SPVM::Net::SSLeay::X509> object, sets the pointer value of the new object to the return value of the native function, and returns the new object.
-
-=head2 check_issued
-
-C<method check_issued : int ($subject : L<Net::SSLeay::X509|SPVM::Net::SSLeay::X509>);>
-
-Calls native L<X509_check_issued|https://docs.openssl.org/1.1.1/man3/X509_check_issued> function given the pointer value of the instance, the pointer value of $subject, and returns its return value.
-
-Exceptions:
-
-The X509 object $subject must be defined. Otherwise an exception is thrown.
 
 =head2 get_ocsp_uri
 
